// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FAQ expands and compresses 1`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "opacity": 1,
      }
    }
  >
    <ViewManagerAdapter_ExpoLinearGradient
      proxiedProperties={
        Object {
          "colors": Array [
            4279998859,
            4283151357,
          ],
          "endPoint": Array [
            1,
            0,
          ],
          "locations": undefined,
          "startPoint": Array [
            0,
            1,
          ],
        }
      }
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 8,
            "elevation": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 5,
            "minHeight": 55,
            "minWidth": 150,
            "padding": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "shadowColor": "#1B998B",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.75,
            "shadowRadius": 3,
          },
          Object {
            "zIndex": 2,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fefefe",
              "fontFamily": "apercu",
              "fontSize": 20,
              "marginBottom": 1,
              "marginTop": 1,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        How's the hand?
      </Text>
    </ViewManagerAdapter_ExpoLinearGradient>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#fff",
        "borderRadius": 10,
        "marginBottom": 30,
        "marginTop": 10,
        "padding": 20,
        "shadowColor": "#000",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 0.183,
        "shadowRadius": 1.08,
      }
    }
  >
    Still a bit stiff
  </View>
</View>
`;

exports[`FAQ expands and compresses 2`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "opacity": 1,
      }
    }
  >
    <ViewManagerAdapter_ExpoLinearGradient
      proxiedProperties={
        Object {
          "colors": Array [
            4279998859,
            4283151357,
          ],
          "endPoint": Array [
            1,
            0,
          ],
          "locations": undefined,
          "startPoint": Array [
            0,
            1,
          ],
        }
      }
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 8,
            "elevation": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 5,
            "minHeight": 55,
            "minWidth": 150,
            "padding": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "shadowColor": "#1B998B",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.75,
            "shadowRadius": 3,
          },
          Object {
            "zIndex": 2,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fefefe",
              "fontFamily": "apercu",
              "fontSize": 20,
              "marginBottom": 1,
              "marginTop": 1,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        How's the hand?
      </Text>
    </ViewManagerAdapter_ExpoLinearGradient>
  </View>
</View>
`;

exports[`FAQ renders with Q and A 1`] = `
<View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "transparent",
        "opacity": 1,
      }
    }
  >
    <ViewManagerAdapter_ExpoLinearGradient
      proxiedProperties={
        Object {
          "colors": Array [
            4279998859,
            4283151357,
          ],
          "endPoint": Array [
            1,
            0,
          ],
          "locations": undefined,
          "startPoint": Array [
            0,
            1,
          ],
        }
      }
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 8,
            "elevation": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "marginBottom": 5,
            "marginTop": 5,
            "minHeight": 55,
            "minWidth": 150,
            "padding": 8,
            "paddingLeft": 16,
            "paddingRight": 16,
            "shadowColor": "#1B998B",
            "shadowOffset": Object {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.75,
            "shadowRadius": 3,
          },
          Object {
            "zIndex": 2,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fefefe",
              "fontFamily": "apercu",
              "fontSize": 20,
              "marginBottom": 1,
              "marginTop": 1,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        How's the hand?
      </Text>
    </ViewManagerAdapter_ExpoLinearGradient>
  </View>
</View>
`;
